k8s-manifests/2-service/ipfs-node-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: ipfs-node
  name: ipfs-node
spec:
  clusterIP: None
  type: ClusterIP
  ports:
    - name: "5001"
      port: 5001
      targetPort: 5001
    - name: "4001"
      port: 4001
      targetPort: 4001
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: ipfs-node
status:
  loadBalancer: {}
