k8s-manifests/2-service/mongo-express-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: mongo-express
  name: mongo-express
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    io.kompose.service: mongo-express
status:
  loadBalancer: {}
