k8s-manifests/2-service/mrv-sender-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3003"
  labels:
    io.kompose.service: mrv-sender
  name: mrv-sender
spec:
  ports:
    - name: "3003"
      port: 3003
      targetPort: 3003
    - name: "5008"
      port: 5008
      targetPort: 5008
  selector:
    io.kompose.service: mrv-sender
status:
  loadBalancer: {}
