k8s-manifests/2-service/topic-viewer-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3006"
  labels:
    io.kompose.service: topic-viewer
  name: topic-viewer
spec:
  ports:
    - name: "3006"
      port: 3006
      targetPort: 3006
    - name: "5009"
      port: 5009
      targetPort: 5009
  selector:
    io.kompose.service: topic-viewer
status:
  loadBalancer: {}
