k8s-manifests/2-service/vault-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: vault
  name: vault
spec:
  clusterIP: None
  type: ClusterIP
  ports:
    - name: "8200"
      port: 8200
      targetPort: 8200
  selector:
    io.kompose.service: vault
status:
  loadBalancer: {}
